<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FreddieFinance</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Freddie Finance</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">REGISTER</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="activity_login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="invalid_login_password">Invalid Password!</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="invalid_login_username">User Doesn\'t Exist!</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="title_activity_create_trans">Create Transaction</string>
    <string name="title_activity_trans">Create Transaction</string>
    <string name="title_activity_account_home">Account Home</string>
    <string name="enterAmount">Enter an amount:</string>

    <string-array name="account_types_array">
        <item>Brokerage</item>
        <item>Savings</item>
        <item>Checking</item>
        <item>Other</item>
    </string-array>
    <string-array name="transaction_array">
        <item>Select</item>
        <item>Deposit</item>
        <item>Withdrawal</item>
    </string-array>
    <string-array name="money_source_array">
        <item>Salary</item>
        <item>Interest</item>
        <item>Gift</item>
    </string-array>
    <string-array name="expense_category_array">
        <item>Food</item>
        <item>Rent</item>
        <item>Entertainment</item>
        <item>Clothing</item>
        <item>Other</item>
        <!-- should we allow an other category? -->
    </string-array>

    <string name="title_activity_create_transaction">CreateTransactionActivity</string>
    <string name="title_activity_transaction">TransactionActivity</string>

</resources>