<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/activity_main_selector" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity" >

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:text="@string/login"
            android:textColor="#006400"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginTitle"
            android:layout_marginTop="12dp"
            android:singleLine="true"
            android:text="@string/username"
            android:textColor="#005200"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameTextView"
            android:hint="@string/username"
            android:inputType="text" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usernameEditText"
            android:layout_marginTop="4dp"
            android:text="@string/password"
            android:textColor="#000052"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_below="@+id/passwordEditText"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textColor="#620000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/loginSubmitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/loginTitle"
            android:layout_below="@+id/loginSubmit"
            android:layout_marginTop="26dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/holo_red_dark" />

    </RelativeLayout>

</ScrollView>